[package]
name = "issues_sauron"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#sauron = { version = "0.49.1", features = ["with-debug"] }
sauron = { path = "../sauron", features = ["with-debug"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
